# personal-ai-assistant

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Modelfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: factory.py  main.py
app/api/handlers/: exception_handler.py
app/api/middleware/: request_context.py
app/api/routers/: chat.py  health.py  root.py  settings.py  system.py
app/application/: dependencies.py
app/application/commands/: __init__.py  chat_command.py
app/application/dto/: __init__.py  chat_request_dto.py  chat_response_dto.py
app/application/exceptions/: llm.py
app/application/interfaces/: calendar_client.py  conversation_repository.py  drive_client.py  gmail_client.py  jira_client.py  llm_provider.py  sheets_client.py
app/application/services/: __init__.py  chat_service.py
app/application/tools/: __init__.py  calendar_tools.py  drive_tools.py  gmail_tools.py  (+4 more)
app/core/: config.py  container.py  context.py  enums.py  error_codes.py  exceptions.py  logging.py  metadata.py
app/schemas/: error.py  health.py  system.py
app/services/: base.py
cli/: __main__.py
docs/adr/: ADR-001-project-architecture.md
frontend/: index.html
scripts/: format.sh  lint.sh  setup_google_apps_auth.py  setup_google_calendar.py  test.sh
scripts/bootstrap/: bootstrap.sh  create_clean_architecture.sh  create_test_structure.sh
tests/: conftest.py
tests/integration/: test_chat.py  test_errors.py  test_health.py  test_request_context.py
(+48 files in other folders)
