[project]
name = "personal-ai-assistant"
version = "0.1.0"
description = "Personal AI Assistant platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.5.0"
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "httpx2",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]


# ------------------------
# Ruff
# ------------------------

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B"
]


# ------------------------
# MyPy
# ------------------------

[tool.mypy]
python_version = "3.13"
strict = true


# ------------------------
# Pytest
# ------------------------

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.uv]
package = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["app"]
